# datanika-core

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  rxconfig.py
.claude/: settings.local.json
.github/workflows/: ci.yml
datanika/: config.py  datanika.py  db.py  hooks.py  scheduler.py
datanika/i18n/: __init__.py  ar.json  de.json  el.json  en.json  es.json  fr.json  ru.json  sr.json  zh.json
datanika/migrations/: env.py  helpers.py
datanika/models/: __init__.py  api_key.py  audit_log.py  catalog_entry.py  connection.py  dependency.py  pipeline.py  run.py  schedule.py  transformation.py  upload.py  uploaded_file.py  user.py
datanika/services/: api_key_service.py  audit_service.py  auth.py  backup_service.py  captcha_service.py  catalog_service.py  connection_service.py  dbt_project.py  dependency_check.py  dependency_service.py  dlt_runner.py  encryption.py  execution_service.py  file_upload_service.py  google_sheets_source.py  mongodb_source.py  naming.py  oauth_routes.py  oauth_service.py  pipeline_service.py  schedule_service.py  scheduler_integration.py  tenant.py  transformation_service.py  upload_service.py  user_service.py
datanika/tasks/: celery_app.py  dependency_helpers.py  pipeline_tasks.py  transformation_tasks.py  upload_tasks.py
etlfabric/: config.py  etlfabric.py
etlfabric/migrations/: env.py  helpers.py
etlfabric/models/: __init__.py  base.py  connection.py  dependency.py  pipeline.py  run.py  schedule.py  transformation.py  user.py
etlfabric/services/: api_key_service.py  audit_service.py  auth.py  connection_service.py  dbt_project.py  dependency_service.py  dlt_runner.py  encryption.py  oauth_routes.py  oauth_service.py  pipeline_service.py  schedule_service.py  tenant.py  transformation_service.py  user_service.py
etlfabric/tasks/: celery_app.py  pipeline_tasks.py  transformation_tasks.py
examples/: README.md  _seed_generators.pyx  build_cython.py  cleanup.py  databases.conf  docker-compose.yml  seed_constants.json  seed_data.py
tests/: conftest.py  test_hooks.py  test_hooks_integration.py
tests/test_i18n/: test_i18n.py
tests/test_migrations/: test_migration_helpers.py
tests/test_models/: test_all_models.py
tests/test_services/: test_api_key_service.py  test_audit_service.py  test_auth.py  test_backup_service.py  test_captcha_service.py  test_catalog_service.py  test_connection_service.py  test_dbt_project.py  test_dependency_check.py  test_dependency_service.py  test_dlt_runner.py  test_encryption.py  test_execution_service.py  test_file_upload_service.py  test_google_sheets_source.py  test_mongodb_source.py  test_oauth_routes.py  (+8 more)
(+83 files in other folders)
